# distill

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PLAN_V1.md  PLAN_V2.md  README.md  dist-workspace.toml  llms.txt
.agents/skills/: distill-verify
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/convert-core/: Cargo.toml
crates/convert-core/src/: lib.rs  v3.rs
examples/: onboarding.json  review.json
scripts/: convert-live-mcp-smoke.sh  install-hooks.sh  jj-with-checks.sh  local-checks.sh  smoke-test-installed-distill.sh
skills/distill-verify/: SKILL.md
skills/distill-verify/agents/: openai.yaml
skills/distill-verify/scripts/: distill_verify_session.sh
src/: main.rs
src/agents/: mod.rs
src/commands/: convert.rs  dedupe.rs  mod.rs  notify.rs  onboard.rs  review.rs  scan.rs  scheduled_run.rs  status.rs  sync_agents.rs  watch.rs
src/config/: mod.rs
src/convert/: mod.rs
src/notify/: mod.rs
src/onboard/: mod.rs  tui.rs
src/preferences/: mod.rs
src/proposals/: mod.rs
src/review/: mod.rs
src/scanner/: engine.rs  mod.rs  reader.rs
src/schedule/: mod.rs
src/shell/: mod.rs
src/sync/: mod.rs
src/sync_agents/: mod.rs
tests/: cli.rs  e2e.rs
