[package]
name = "distill"
version = "0.1.1"
edition = "2024"
description = "CLI tool that monitors AI agent sessions, identifies patterns, and proposes skills"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[package.metadata.dist]
dist = true
installers = ["shell", "homebrew"]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
tap = "nclandrei/homebrew-tap"
