[package]
name = "distill"
version = "0.1.3"
edition = "2024"
description = "CLI tool that monitors AI agent sessions, identifies patterns, and proposes skills"
license = "MIT"
repository = "https://github.com/nclandrei/distill"
homepage = "https://github.com/nclandrei/distill"
readme = "README.md"
authors = ["Andrei Nicolae"]
keywords = ["ai", "automation", "agent", "cli", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
installers = ["shell", "homebrew"]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
tap = "nclandrei/homebrew-tap"
