[package]
name = "convert-core"
version = "0.1.0"
edition = "2024"
description = "Core MCP conversion planning/apply/verify logic for distill"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
